Test/InvalidFiles/PgCompletionist/ContentPropertyAttribute1.cs
namespace Fake1;

public class ContentPropertyAttribute
{
}